add image to comment. add comments to yearbook
